# ipld-car

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  deny.toml  dprint.json
.github/workflows/: rust.yml
benches/: fs_reader.rs
carcli/: Cargo.toml
carcli/src/: commands.rs  main.rs
carcli/src/commands/: cat.rs  common.rs  create.rs  info.rs  ls.rs  write.rs
carcli/tests/: cli.rs
cli/: Cargo.toml
cli/src/: main.rs
examples/: link_visitor_demo.rs
ipld-car/: Cargo.toml
ipld-car/benches/: fs_reader.rs
ipld-car/examples/: link_visitor_demo.rs
ipld-car/src/: arena.rs  bounded_reader.rs  car.rs  cid_builder.rs  config.rs  dag_pb.rs  error.rs  lib.rs  proto.rs  reader_with_len.rs  test_helpers.rs  traits.rs
ipld-car/src/bounded_reader/: error.rs  functions.rs  mem_bounded_reader.rs  sync.rs  traits.rs
ipld-car/src/bounded_reader/sync/: bounded_reader.rs  chained_bounded_reader.rs  shared_bounded_reader.rs
ipld-car/src/car/: as_block_finder.rs  as_cid_graph.rs  as_file_system.rs  block.rs  block_builder.rs  block_content.rs  block_def.rs  cbor_cid.rs  context_len.rs  fs.rs  header.rs  load.rs  metadata.rs  tests.rs  tools.rs  traits.rs  write.rs
ipld-car/src/car/fs/: defered_append_file.rs  deferred_append_file.rs  rw_transmuter.rs  tests.rs  vfs.rs
ipld-car/src/config/: chunck_policy.rs  dag_layout.rs
ipld-car/src/dag_pb/: directory.rs  link.rs  multi_block_file.rs  single_block_file.rs  symlink.rs
ipld-car/src/error/: cid.rs  dag_pb.rs  invalid.rs  loop_detected.rs  not_found.rs  not_supported.rs  pb_node.rs  poisoned.rs
ipld-car/src/schema/: unixfs.proto
resources/tests/: subdir-with-mixed-block-files.car  symlink.blockIds
resources/tests/exp/block_ids/: dir-with-files.blockIds  dir-with-percent-encoded-filename.blockIds
resources/tests/exp/cli/: dag-pb.info.output  dir-with-duplicate-files.info.output  dir-with-duplicate-files.ls.output  dir-with-files.info.output  dir-with-percent-encoded-filename.info.output  dir-with-percent-encoded-filename.ls.output  fixtures.info.output  fixtures.ls.output  subdir-with-mixed-block-files.info.output  subdir-with-mixed-block-files.ls.output  subdir-with-two-single-block-files.info.output  subdir-with-two-single-block-files.ls.output  symlink.info.output  symlink.ls.output
resources/tests/exp/roots/: dir-with-files.roots  dir-with-percent-encoded-filename.roots  symlink.roots
resources/tests/fixtures/: dag-pb.car  dir-with-files.car  dir-with-percent-encoded-filename.car  fixtures.car  single-layer-hamt-with-multi-block-files.car  subdir-with-two-single-block-files.car  symlink.car
src/: arena.rs  bounded_reader.rs  builder.rs  car.rs  config.rs  dag_pb.rs  error.rs  flat_iterator.rs  lib.rs  proto.rs  test_helpers.rs  unixfs.rs  with_cid.rs
src/car/: block.rs  block_builder.rs  block_content.rs  cbor_cid.rs  fs.rs  tests.rs
src/car/fs/: tests.rs  vfs.rs
src/dag_pb/: single_block_file.rs  symlink.rs
src/error/: invalid.rs
src/schema/: unixfs.proto
src/unixfs/: builder.rs  file_reader.rs  file_system_reader.rs  file_system_writer.rs  proto.rs  varint.rs
