[workspace]
members = ["ipld-car", "carcli"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Miguel Garcia <miguel@dmious.com>"]
homepage = "https://github.com/fmiguelgarcia/ipld-car"
repository = "https://github.com/fmiguelgarcia/ipld-car"
license = "MIT"

[workspace.lints.rust]
suspicious_double_ref_op = { level = "allow", priority = 2 }

[workspace.lints.clippy]
all = { level = "allow", priority = 0 }
correctness = { level = "warn", priority = 1 }
complexity = { level = "warn", priority = 1 }
if-same-then-else = { level = "allow", priority = 2 }
zero-prefixed-literal = { level = "allow", priority = 2 }            # 00_1000_000
type_complexity = { level = "allow", priority = 2 }                  # raison d'etre
nonminimal-bool = { level = "allow", priority = 2 }                  # maybe
borrowed-box = { level = "allow", priority = 2 }                     # Reasonable to fix this one
too-many-arguments = { level = "allow", priority = 2 }               # (Turning this on would lead to)
needless-lifetimes = { level = "allow", priority = 2 }               # generated code
unnecessary_cast = { level = "allow", priority = 2 }                 # Types may change
identity-op = { level = "allow", priority = 2 }                      # One case where we do 0 +
useless_conversion = { level = "allow", priority = 2 }               # Types may change
unit_arg = { level = "allow", priority = 2 }                         # stylistic
option-map-unit-fn = { level = "allow", priority = 2 }               # stylistic
bind_instead_of_map = { level = "allow", priority = 2 }              # stylistic
erasing_op = { level = "allow", priority = 2 }                       # E.g. 0 * DOLLARS
eq_op = { level = "allow", priority = 2 }                            # In tests we test equality.
while_immutable_condition = { level = "allow", priority = 2 }        # false positives
needless_option_as_deref = { level = "allow", priority = 2 }         # false positives
derivable_impls = { level = "allow", priority = 2 }                  # false positives
stable_sort_primitive = { level = "allow", priority = 2 }            # prefer stable sort
extra-unused-type-parameters = { level = "allow", priority = 2 }     # stylistic
default_constructed_unit_structs = { level = "allow", priority = 2 } # stylistic


[workspace.dependencies]
ipld-car = { path = "ipld-car", version = "0.1.0" }
petgraph = "0.8.3"

# libipld: CID
libipld = { version = "0.16.0", default-features = false, features = [
	"dag-pb",
	"dag-json",
] }

# Derive helpers & tools
derive_builder = { version = "0.20.2", default-features = false }
derive_more = { version = "2", default-features = false, features = [
	"from",
	"into",
	"constructor",
	"as_ref",
	"deref",
	"debug",
] }
derivative = "2.2.0"
derive-new = "0.7.0"
strum = { version = "0.24", features = ["derive"] }

# Extra containers
bytes = { version = "1.8.0", default-features = false }
smallvec = { version = "1.15", features = [
	"union",
	"const_generics",
	"const_new",
] }


# Units
nbytes = "0.1"
unit-prefix = "0.5.2"

# Terminal
uutils_term_grid = "0.8.0"

# Serde 
serde = "1"
serde_bytes = "0.11"

# VFS & Filesystem
vfs = { version = "0.12.2", default-features = false }
tempfile = "3.2.0"
users = "0.11"
time = { version = "0.3", features = ["formatting"] }

# CAR v1 — CBOR header serialisation (only with std)
ciborium = "0.2"
leb128 = "0.2.5"

# CLI tools
clap = { version = "4", features = ["derive"] }

# Error, logs and benchs
thiserror = { version = "2.0.11", default-features = false }
tracing = { version = "0.1.40", features = ["log"] }
anyhow = "1"
criterion = "0.5.1"
test-case = "3.3.1"
test-log = { version = "0.2.16", features = ["trace"] }
pretty_env_logger = "0.5"
handlebars = "6.4"
regex = "1"

# ProtoBuf 
prost = { version = "0.13.3", default-features = false, features = ["derive"] }
quick-protobuf = { version = "0.8.1", default-features = false }

# [[bench]]
# name = "fs_reader"
# harness = false
