[package]
name = "ipld-car"
version = "0.1.0"
license = "MIT"
description = "DAG-PB serialization/deserialization library for IPFS CAR v1 archives"
authors = ["Miguel Garcia <miguel@dmious.com>"]
homepage = "https://github.com/fmiguelgarcia/ipld-car"
repository = "https://github.com/fmiguelgarcia/ipld-car"
readme = "../README.md"
edition = "2021"
publish = true

categories = ["filesystem"]
keywords = ["car", "ipld", "vfs"]

[dependencies]
libipld = { workspace = true, features = ["dag-pb", "dag-json"] }
petgraph.workspace = true

# Derive helpers & tools
derive_builder.workspace = true
derive_more = { workspace = true, features = [
	"from",
	"into",
	"constructor",
	"as_ref",
	"deref",
	"debug",
] }
derivative.workspace = true
derive-new.workspace = true
strum.workspace = true

# Extra containers
bytes = { workspace = true, features = ["serde"] }
smallvec.workspace = true

# Units 
nbytes.workspace = true

# Serde 
serde.workspace = true
serde_bytes.workspace = true

# VFS & Filesystem
vfs = { workspace = true, optional = true }
tempfile.workspace = true

# CAR v1 — CBOR header serialisation (only with std)
ciborium = { workspace = true, optional = true }
leb128.workspace = true

# Error & logs
thiserror.workspace = true
tracing.workspace = true

# Proto
prost = { workspace = true, features = ["derive"] }
quick-protobuf.workspace = true

# CLI support
clap = { workspace = true, optional = true }


[dev-dependencies]
test-case.workspace = true
pretty_env_logger.workspace = true
test-log.workspace = true
anyhow.workspace = true
criterion.workspace = true

[features]
default = [ "std" ]
jumbo-chunks = []
test_helpers = []
cli = [ "dep:clap" ]
vfs = [ "dep:vfs" ]
std = [ "bytes/std", "dep:ciborium", "derive_builder/std", "prost/std" ]
